force-app/main/default/objects/Check_In__c/Check_In__c.object-meta.xml
<CustomObject>
    <label>Check In</label>
    <nameField>
        <label>Check In Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Check Ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>