force-app/main/default/objects/Check_In__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport</label>
    <referenceTo>Passport__c</referenceTo>
    <relationshipLabel>Check Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>